# Backend/Main/source/routes/adminRoutes.js
@@ -1,39 +1,0 @@
-'use strict';
-
-const router = require('express').Router();
-const adminController = require('../controllers/adminController');
-const authMiddleware = require('../middleware/authMiddleware');
-
-class AdminRoutes {
-
-    constructor() {
-        this.myRoutes = router;
-        this.core();
-    }
-
-    core() {
-        this.myRoutes.post('/login', adminController.adminLogin);
-        this.myRoutes.use(authMiddleware.authenticateToken);
-        this.myRoutes.use(authMiddleware.authorizeRole(['admin']));
-        this.myRoutes.post('/register', adminController.adminRegister);
-        this.myRoutes.get('/employees', adminController.getAllEmployees);
-        this.myRoutes.get('/employees/:id', adminController.getEmployeeById);
-        this.myRoutes.delete('/employees/:id', adminController.deleteEmployee);
-        this.myRoutes.delete('/employee-delete-multiple', adminController.deleteEmployees);
-        this.myRoutes.post('/attendance', adminController.getAttendance);
-        this.myRoutes.post('/attendance/:id', adminController.getAttendanceById);
-        this.myRoutes.get('/web-app-activity', adminController.getWebAppActivity);
-        this.myRoutes.put('/update-employee', adminController.updateEmployee);
-
-        this.myRoutes.get('/get-departments', adminController.getDepartments);
-        this.myRoutes.post('/add-department', adminController.addDepartment);
-        this.myRoutes.put('/update-department', adminController.updateDepartment);
-        this.myRoutes.delete('/delete-department/:id', adminController.deleteDepartment);
-    }
-
-    getRouters() {
-        return this.myRoutes;
-    }
-}
-
-module.exports = AdminRoutes;
